--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Roihan Sori",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
